<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    android:background="@drawable/background_texture">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize" />

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="4dp"-->
            <!--android:background="@drawable/toolbar_dropshadow"/>-->

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:src="@drawable/ico_error_loading"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@drawable/border_rounded"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_marginLeft="20dp"
                android:gravity="center|left"
                tools:text="40₽"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buttonDecrease"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/one"
                android:textSize="18sp"
                android:textColor="@color/colorDivider"
                android:gravity="center"/>

            <Button
                android:id="@+id/buttonIncrease"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            tools:text="Description"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/border_rounded"/>

        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/border_rounded"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:text="@string/cart_add"/>

    </LinearLayout>

</ScrollView>