<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_texture"
    android:id="@+id/dialogView">

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reviewScrollView"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:text="Info"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/buttonReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginBottom="50dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/add_review"
                    android:background="@drawable/border_rounded_button_order" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/llReview"
                    android:visibility="invisible">

                    <AutoCompleteTextView
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/border_rounded"
                        android:drawableTint="@color/colorAccent"
                        android:drawableLeft="@mipmap/ico_user"
                        android:textColorHint="@color/colorDivider"
                        android:textColor="@color/colorWhite"
                        android:drawablePadding="15dp"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:padding="8dp" />

                    <EditText
                        android:id="@+id/etReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/border_rounded"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorDivider"
                        android:hint="@string/review"
                        android:inputType="textCapSentences"
                        android:padding="32dp"/>

                    <Button
                        android:id="@+id/buttonReviewDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="100dp"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/send"
                        android:background="@drawable/border_rounded_button_order" />


                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>