<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_food">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize" />

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="4dp"-->
        <!--android:background="@drawable/toolbar_dropshadow"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rounded"
                android:drawableTint="@color/colorAccent"
                android:drawableLeft="@mipmap/ico_user"
                android:textColorHint="@color/colorDivider"
                android:textColor="@color/colorDivider"
                android:drawablePadding="15dp"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:padding="16dp" />

            <AutoCompleteTextView
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rounded"
                android:textColorHint="@color/colorDivider"
                android:drawableTint="@color/colorAccent"
                android:drawableLeft="@mipmap/ico_location"
                android:textColor="@color/colorDivider"
                android:drawablePadding="15dp"
                android:hint="@string/address"
                android:padding="16dp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:maxLines="4"
                android:inputType="phone"
                android:typeface="monospace"
                mask:allowed_chars="1234567890"
                mask:mask="+7(###)###-##-##"
                android:hint="**********"
                android:textColorHint="@color/colorDivider"
                android:textColor="@color/colorDivider"
                app:keep_hint="true"
                android:background="@drawable/border_rounded"
                android:drawableTint="@color/colorAccent"
                android:drawableLeft="@mipmap/ico_phone"
                android:drawablePadding="15dp"
                android:padding="16dp"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/buttonOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/order_v"
                android:background="@drawable/border_rounded_button_order"
                app:spinning_bar_color="@color/colorAccent"
                app:spinning_bar_padding="3dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>